--- a/src/app/sub-page/sub-page.component.scss
+++ b/src/app/sub-page/sub-page.component.scss
@@ -1,12 +1,91 @@
-.subpage-1 {
-  grid-template-columns: 4.5cm 1fr;
-  grid-template-rows: 4.5cm 1fr;
+:host {
+  --left-size: 4.5cm;
+  padding: 0;
+  border: 1px white solid;
+  height: 266mm;
+  outline: var(--space) #FFffff solid;
+  display: grid;
+  grid-gap: 0 var(--space);
+  grid-template-columns: var(--left-size) 1fr;
+}
+
+:host[class="subpage-1"] {
+  grid-template-columns: var(--left-size) 1fr;
+  grid-template-rows: var(--left-size) 1fr;
   gap: 0px 0px;
   grid-template-areas:
     "header header"
     ". .";
+  .subpage-header {
+      grid-area: header;
+      display: grid;
+      grid-template-columns: var(--left-size) 1fr;
+      grid-template-rows: var(--left-size);
+    }
 }
 
-.subpage-1 .subpage-header {
-  grid-area: header;
+.content-left {
+  padding-right: var(--space);
+  color: white;
+  position: relative;
+  header {
+    padding-bottom: var(--space-header);
+  }
+  h2, h3 {
+    color: white;
+  }
+  p {
+    margin:0;
+  }
+}
+.content-right {
+  padding-left: var(--space);
+  color: #2c323e;
+  header {
+    padding-bottom: var(--space-header);
+  }
+  p {
+    text-align: justify;
+    margin:0;
+  }
+}
+
+
+.avatar {
+  max-width: 100%;
+  position: relative;
+  border-radius: 100%;
+  filter: grayscale(1)
+}
+
+.headline {
+  position: relative;
+  &-right {
+      color: #2c323e;
+      &::before {
+        content: '';
+        position: absolute;
+        width: 8mm;
+        height: .3mm;
+        background-color: #2c323e;
+        bottom: -2mm;
+      }
+    }
+  &-left::before {
+    content: '';
+    position: absolute;
+    width: 8mm;
+    height: .3mm;
+    background-color: white;
+    bottom: -2mm;
+  }
+}
+
+@media print {
+  :host {
+    padding: 0;
+    border: 1px white solid;
+    height: 266.6mm;
+    outline: var(--space) #ffffff solid;
+  }
 }
