--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,18 +1,109 @@
 :root {
+  --body-text-size: 11px;
   --page-width: 21cm;
   --page-min-height: 29.7cm;
   --space: 1.5cm;
-  --headline-2-size: 13pt;
+  --headline-2-size: 1.3rem;
+  --space-header: .5cm;
 }
 
-body {
+body, html {
   margin: 0;
   padding: 0;
-  background-color: #FAFAFA;
-  font: 12pt "Calibri";
+  background-color: #303030;
+  font-size: var(--body-text-size);
+  font-family: "Calibri"!important;
+}
+@media print {
+  body {
+    background-color: white;
+  }
 }
 
 * {
   box-sizing: border-box;
   -moz-box-sizing: border-box;
 }
+
+.headline {
+  color: #2c323e;
+  line-height: 1.2;
+  margin-top: 0;
+  font-weight: 400;
+  margin-bottom: 0;
+}
+
+.h-1 {
+  font-size: 30px;
+}
+
+.h-2 {
+  font-size: 16px;
+  font-weight: 500;
+  opacity: .5;
+}
+
+.h-3 {
+  font-size: 13px;
+  font-weight: 600;
+}
+
+.h-4 {
+  font-weight: 600;
+}
+
+.text-white {
+  color: white!important;
+}
+
+.space-content-block {
+  padding-bottom: calc(var(--space-header) - .2cm);
+}
+
+.space-content-block--top {
+  padding-top: var(--space-header);
+}
+
+ul {
+  margin: 0;
+  padding: 0 0 0 calc(var(--space-header) - .2cm);
+}
+
+.no-space {
+  padding: 0;
+  margin:0;
+}
+
+.points-wrapper {
+  display: grid;
+  grid-template-columns: 9px 9px 9px 9px 1fr;
+  align-items: center;
+  grid-gap: 1px;
+}
+.point {
+  width: 5px;
+  height: 5px;
+  border-radius: 5px;
+  border: 1px solid white;
+  display: block;
+  &.active {
+    background-color: white;
+  }
+}
+
+[contenteditable]:focus {
+  transition: all 100ms linear;
+  background-color: #424242;
+  color: white;
+  transform: scale(1.1);
+  padding: 3%;
+  border-radius: 4px;
+  border: 1px solid #424242;
+  outline: 1px solid #424242;
+  box-shadow: 
+    0px 11px 15px -7px rgba(0, 0, 0, 0.2),
+    0px 24px 38px 3px rgba(0, 0, 0, 0.14),
+    0px 9px 46px 8px rgba(0, 0, 0, 0.12);
+}
+html, body { height: 100%; }
+body { margin: 0; font-family: Calibri, 'Trebuchet MS','Gill Sans','Gill Sans MT', sans-serif, sans-serif; }
