--- a/src/app/page/page.component.scss
+++ b/src/app/page/page.component.scss
@@ -35,78 +35,9 @@
     "header header"
     ". .";
 
-  .subpage-header {
+  app-page-header {
     grid-area: header;
-    display: grid;
-    grid-template-columns: var(--left-size) 1fr;
-    grid-template-rows: var(--left-size);
-  }
-}
-
-.content-left {
-  padding-right: var(--space);
-  color: white;
-  position: relative;
-
-  header {
-    padding-bottom: var(--space-header);
-  }
-
-  h2,
-  h3 {
-    color: white;
-  }
-
-  p {
-    margin: 0;
-  }
-}
-
-.content-right {
-  padding-left: var(--space);
-  color: #2c323e;
-
-  header {
-    padding-bottom: var(--space-header);
-  }
-
-  p {
-    text-align: justify;
-    margin: 0;
-  }
-}
-
-
-.avatar {
-  max-width: 100%;
-  position: relative;
-  border-radius: 100%;
-  filter: grayscale(1)
-}
-
-.headline {
-  position: relative;
-
-  &-right {
-    color: #2c323e;
-
-    &::before {
-      content: '';
-      position: absolute;
-      width: 8mm;
-      height: .3mm;
-      background-color: #2c323e;
-      bottom: -2mm;
-    }
-  }
-
-  &-left::before {
-    content: '';
-    position: absolute;
-    width: 8mm;
-    height: .3mm;
-    background-color: white;
-    bottom: -2mm;
+    position: relative;
   }
 }
 
