--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -44,4 +44,7 @@ mat-drawer-content {
     background: initial;
     page-break-after: always;
   }
+  .mat-drawer-container {
+    background-color: white;
+  }
 }
