--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -9,7 +9,9 @@
 
   <ng-content></ng-content>
 
-  <button mat-icon-button aria-label="Print">
+  <button 
+    mat-icon-button aria-label="Print" 
+    (click)="windowPrint()">
     <mat-icon>print</mat-icon>
   </button>
   
