--- a/src/styles.scss
+++ b/src/styles.scss
@@ -167,5 +167,9 @@ ul {
     0px 24px 38px 3px rgba(0, 0, 0, 0.14),
     0px 9px 46px 8px rgba(0, 0, 0, 0.12);
 }
+
+.color-primary {
+  color: #c2185b!important
+}
 html, body { height: 100%; }
 body { margin: 0; font-family: Calibri, 'Trebuchet MS','Gill Sans','Gill Sans MT', sans-serif, sans-serif; }
