--- a/src/app/page/certificacions/certificacions.component.html
+++ b/src/app/page/certificacions/certificacions.component.html
@@ -2,9 +2,7 @@
   <h3 class="headline headline-left h-3">Zertifizierungen</h3>
 </header>
 <ul>
-  <li>Vue 3</li>
-  <li>Vue 2, Vuetify & Vuex</li>
-  <li>Angular 2</li>
-  <li>Typescript 2</li>
-  <li>Web Components</li>
+  <li *ngFor="let certificacion of certificacions">
+    {{ certificacion }}
+  </li>
 </ul>
