--- a/src/app/page/certificacions/certificacions.component.html
+++ b/src/app/page/certificacions/certificacions.component.html
@@ -1,5 +1,7 @@
 <header>
-  <h3 class="headline headline-left h-3">Zertifizierungen</h3>
+  <h3 class="headline headline-left h-3">
+    Zertifizierungen
+  </h3>
 </header>
 <ul>
   <li *ngFor="let certificacion of certificacions">
