--- a/src/app/page/contact/contact.component.html
+++ b/src/app/page/contact/contact.component.html
@@ -1,8 +1,12 @@
 <header>
-  <h3 class="headline headline-left h-3 text-white">Kontakt</h3>
+  <h3 class="headline headline-left h-3 text-white">
+    Kontakt
+  </h3>
 </header>
 <div class="space-content-block">
-  <h4 class="headline h-4 text-white">Telefon</h4>
+  <h4 class="headline h-4 text-white">
+    Telefon
+  </h4>
   <p 
     #el_phone
     contenteditable="true"
@@ -11,7 +15,9 @@
   </p>
 </div>
 <div class="space-content-block">
-  <h4 class="headline h-4 text-white">E-Mail</h4>
+  <h4 class="headline h-4 text-white">
+    E-Mail
+  </h4>
   <p
     #el_email 
     contenteditable="true"
@@ -19,7 +25,9 @@
     [innerHTML]="email"></p>
 </div>
 <div class="space-content-block">
-  <h4 class="headline h-4 text-white">Adresse</h4>
+  <h4 class="headline h-4 text-white">
+    Adresse
+  </h4>
   <p 
     #el_address
     contenteditable="true"
