--- a/src/app/page/page.component.html
+++ b/src/app/page/page.component.html
@@ -17,6 +17,8 @@
 </aside>
 
 <section class="content-right">
-  <app-about-me *ngIf="showAboutMe" class="content-block" />
+  <app-about-me 
+    *ngIf="showAboutMe" 
+    class="content-block" />
 </section>
 
