--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -3,7 +3,9 @@
   color="primary"
   class="mat-elevation-z6">
 
-  <span>Editor de currículum vitae</span>
+  <span>
+    Editor de currículum vitae
+  </span>
 
   <span class="toolbar-spacer"></span>
 
