--- a/src/app/page/page.component.html
+++ b/src/app/page/page.component.html
@@ -12,7 +12,7 @@
     class="space-content-block--top space-content-block" />
 
   <app-languages
-    *ngIf="languagesVisible" 
+    *ngIf="showLanguages" 
     class="space-content-block--top space-content-block" />
 </aside>
 
