--- a/src/styles.scss
+++ b/src/styles.scss
@@ -171,5 +171,8 @@ ul {
 .color-primary {
   color: #c2185b!important
 }
+.clickable {
+  cursor: pointer;
+}
 html, body { height: 100%; }
 body { margin: 0; font-family: Calibri, 'Trebuchet MS','Gill Sans','Gill Sans MT', sans-serif, sans-serif; }
