add localStorage support and more

--- a/src/app/page/certificacions/certificacions.component.html
+++ b/src/app/page/certificacions/certificacions.component.html
@@ -5,7 +5,7 @@
 </header>
 <ul 
   class="clickable"
-  (click)="editCertificacions()">
+  (click)="edit()">
   <li *ngFor="let certificacion of certificacions">
     {{ certificacion }}
   </li>
