--- a/src/app/page/certificacions/certificacions.component.html
+++ b/src/app/page/certificacions/certificacions.component.html
@@ -1,6 +1,4 @@
-<header 
-  class="clickable"
-  (click)="edit()">
+<header>
   <h3 class="headline headline-left h-3">
     Zertifizierungen
   </h3>
@@ -10,3 +8,4 @@
     {{ certificacion }}
   </li>
 </ul>
+<app-clickable-overlay />
