--- a/src/app/page/certificacions/certificacions.component.scss
+++ b/src/app/page/certificacions/certificacions.component.scss
@@ -1,6 +1,15 @@
 :host {
-  display: block
+  display: block;
+  float: left;
+  width: 100%;
+  position: relative;
 }
 header {
   float:left;
+  width: 100%;
+  margin-bottom: .25cm;
+}
+.space-content-block {
+  float: left;
+  width: 100%;
 }
