--- a/src/app/page/languages/languages.component.html
+++ b/src/app/page/languages/languages.component.html
@@ -1,12 +1,7 @@
-<header
-  class="clickable"
-  (click)="edit()">
+<header>
   <h3 class="headline headline-left h-3">Sprachen</h3>
-  <mat-icon>edit</mat-icon>
 </header>
-<ul
-  class="clickable"
-  (click)="edit()">
+<ul>
   <li *ngFor="let language of languages" class="points-wrapper">
     <span 
       class="point active"
@@ -23,3 +18,4 @@
     {{ language.name }}
   </li>
 </ul>
+<app-clickable-overlay />
