--- a/src/app/page/languages/languages.component.scss
+++ b/src/app/page/languages/languages.component.scss
@@ -1,12 +1,21 @@
 :host {
-  display: block
+  display: block;
+  float: left;
+  width: 100%;
+  position: relative;
 }
 header {
   float: left;
   width: 100%;
+  margin-bottom: .25cm;
 }
 ul {
   width: 100%;
   float: left;
   padding: 0;
+}
+
+.space-content-block {
+  float: left;
+  width: 100%;
 }
