--- a/src/app/page/top-skills/top-skills.component.scss
+++ b/src/app/page/top-skills/top-skills.component.scss
@@ -1,7 +1,11 @@
 :host {
   display: block;
+  float:left;
+  width: 100%;
+  position:relative;
 }
 header {
   float: left;
   width: 100%;
+  margin-bottom: .25cm;
 }
