--- a/src/styles.scss
+++ b/src/styles.scss
@@ -4,7 +4,7 @@
   --page-min-height: 29.7cm;
   --space: 1.5cm;
   --headline-2-size: 1.3rem;
-  --space-header: .5cm;
+  --space-header: .25cm;
 }
 
 body, html {
@@ -119,16 +119,16 @@ body, html {
 }
 
 .space-content-block {
-  padding-bottom: calc(var(--space-header) - .2cm);
+  padding-bottom: calc(var(--space-header) - .05cm);
 }
 
 .space-content-block--top {
-  padding-top: var(--space-header);
+  padding-top: calc(var(--space-header) * 2);
 }
 
 ul {
   margin: 0;
-  padding: 0 0 0 calc(var(--space-header) - .2cm);
+  padding: 0 0 0 calc(var(--space-header) - .05cm);
 }
 
 .no-space {
