--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -19,12 +19,7 @@
   </mat-drawer>
   <mat-drawer-content>
     <div class="book">
-      <app-page 
-        class="subpage-1"
-        [showTopSkills]="showTopSkills"
-        [showCertificacions]="showCertificacions"
-        [showAboutMe]="showAboutMe"
-        [showLanguages]="showLanguages" />
+      <app-page class="subpage-1"/>
         + Page hinzufügen
     </div>
   </mat-drawer-content>
