--- a/src/app/page/contact/contact-dialog/contact-dialog.component.html
+++ b/src/app/page/contact/contact-dialog/contact-dialog.component.html
@@ -4,29 +4,25 @@
 <form [formGroup]="contactForm" (ngSubmit)="onSubmit()">
   <mat-dialog-content>
 
-    <mat-form-field 
-      appearance="outline">
+    <mat-form-field>
       <mat-label>Telefon</mat-label>
       <input matInput formControlName="phone">
       <mat-icon matSuffix>phone</mat-icon>
     </mat-form-field>
 
-    <mat-form-field 
-      appearance="outline">
+    <mat-form-field>
       <mat-label>E-Mail</mat-label>
       <input matInput formControlName="eMail">
       <mat-icon matSuffix>email</mat-icon>
     </mat-form-field>
 
-    <mat-form-field 
-      appearance="outline">
+    <mat-form-field>
       <mat-label>Straße und Hausnummer</mat-label>
       <input matInput formControlName="street">
       <mat-icon matSuffix>signpost</mat-icon>
     </mat-form-field>
 
-    <mat-form-field 
-      appearance="outline">
+    <mat-form-field>
       <mat-label>PLZ Wohnort</mat-label>
       <input matInput formControlName="zipCodeAndCity">
       <mat-icon matSuffix>cottage</mat-icon>
