--- a/src/app/page/languages/languages-dialog/languages-dialog.component.html
+++ b/src/app/page/languages/languages-dialog/languages-dialog.component.html
@@ -3,9 +3,7 @@
 </h2>
 <form>
   <mat-dialog-content>
-    <mat-form-field 
-      appearance="outline" 
-      class="dialog-chip-list">
+    <mat-form-field class="dialog-chip-list">
       <mat-chip-grid
         #chipList 
         focused="false"
