--- a/src/app/page/page.component.scss
+++ b/src/app/page/page.component.scss
@@ -22,7 +22,7 @@
   height: 100%;
   width: 6cm;
   min-height: 29.7cm;
-  background-color: #2c323e;
+  background-color: var(--main-bg-color);
   top: 0;
   left: 0;
 }
