--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -21,6 +21,8 @@
     <div 
       class="book" 
       [style.--main-bg-color]="mainBgColor"
+      [style.--headline-color]="headlineColor"
+      [style.--headline-font]="headlineFont"
     >
       <app-page class="subpage-1"/>
         + Page hinzufügen
