--- a/src/app/header/header.component.scss
+++ b/src/app/header/header.component.scss
@@ -10,3 +10,17 @@ mat-toolbar {
   height: 56px;
     font-family: "Calibri" !important;
 }
+
+.screen {
+  cursor: pointer;
+}
+
+.logo {
+  margin-right: 20px;
+  font-size: 30px;
+  margin-top: -7px;
+  color: #c2185b;
+}
+.title {
+  color: #9aa0a6;
+}
