--- a/src/app/page/page.component.scss
+++ b/src/app/page/page.component.scss
@@ -23,6 +23,7 @@
   width: 6cm;
   min-height: 29.7cm;
   background-color: var(--main-bg-color);
+  border-radius: 4px 0 0 4px;
   top: 0;
   left: 0;
 }
