--- a/src/app/page/top-skills/top-skills.component.html
+++ b/src/app/page/top-skills/top-skills.component.html
@@ -1,5 +1,5 @@
 <header>
-  <h3 class="headline headline-left h-3">Top-skills</h3>
+  <h3 class="headline headline-left h-3">Top-Skills</h3>
 </header>
 <ul>
   <li *ngFor="let topSkill of topSkills">
