--- a/src/app/clickable-overlay/clickable-overlay.component.scss
+++ b/src/app/clickable-overlay/clickable-overlay.component.scss
@@ -9,7 +9,7 @@
   mat-icon {
     transition: opacity 100ms linear 0s;
     position: absolute;
-    background: #c2185b;
+    background: rgba(0,0,0,.9);
     border-radius: 100%;
     opacity: 0;
     top: 50%;
