--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,13 +1,3 @@
-:root {
-  --body-text-size: 11px;
-  --page-width: 21cm;
-  --page-min-height: 29.7cm;
-  --space: 1.5cm;
-  --headline-2-size: 1.3rem;
-  --space-header: .25cm;
-  --main-bg-color: #2c323e;
-}
-
 body, html {
   margin: 0;
   padding: 0;
@@ -38,6 +28,7 @@ body, html {
   h2,
   h3 {
     color: white;
+    font-family: var(--headline-font)!important;
   }
 
   p {
@@ -60,7 +51,8 @@ body, html {
 }
 
 .headline {
-  color: #2c323e;
+  font-family: var(--headline-font) !important;
+  color: var(--headline-color);
   line-height: 1.2;
   margin-top: 0;
   font-weight: 400;
@@ -68,21 +60,25 @@ body, html {
 }
 
 .h-1 {
+  font-family: var(--headline-font) !important;
   font-size: 30px;
 }
 
 .h-2 {
+  font-family: var(--headline-font) !important;
   font-size: 16px;
   font-weight: 500;
   opacity: .5;
 }
 
 .h-3 {
+  font-family: var(--headline-font) !important;
   font-size: 13px;
   font-weight: 600;
 }
 
 .h-4 {
+  font-family: var(--headline-font) !important;
   font-weight: 600;
 }
 
@@ -91,17 +87,18 @@ body, html {
 }
 
 .headline {
+  font-family: var(--headline-font) !important;
   position: relative;
 
   &-right {
-    color: #2c323e;
+    color: var(--headline-color);
 
     &::before {
       content: '';
       position: absolute;
       width: 8mm;
       height: .3mm;
-      background-color: #2c323e;
+      background-color: var(--headline-color);
       bottom: -2mm;
     }
   }
@@ -172,7 +169,7 @@ ul {
 .color-primary {
   color: #c2185b!important
 }
-.clickable {
+/* .clickable {
   cursor: pointer;
   .headline {
     float: left;
@@ -188,11 +185,11 @@ ul {
         opacity: 1;
       }
   }
-}
+} */
 @media print {
   .clickable mat-icon {
     display: none;
   }
 }
 html, body { height: 100%; }
-body { margin: 0; font-family: Calibri, 'Trebuchet MS','Gill Sans','Gill Sans MT', sans-serif, sans-serif; }
+body { margin: 0; font-family: var(--headline-font); }
