refactoring, add zoom

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -27,6 +27,7 @@
       <app-page class="subpage-1"/>
         + Page hinzufügen
     </div>
+    <app-toggle-zoom class="no-in-print" />
   </mat-drawer-content>
 </mat-drawer-container>
 
