--- a/src/app/page/page.component.html
+++ b/src/app/page/page.component.html
@@ -20,5 +20,7 @@
   <app-about-me 
     *ngIf="showAboutMe" 
     class="content-block" />
+    
+    <app-experience-list class="space-content-block--top space-content-block" />
 </section>
 
