--- a/src/app/page/page.component.scss
+++ b/src/app/page/page.component.scss
@@ -43,10 +43,10 @@
 }
 
 @media print {
-  :host {
+ /* :host {
     padding: 0;
     border: 1px white solid;
     height: 266.6mm;
     outline: var(--space) #ffffff solid;
-  }
+  }*/
 }
