zoom - added reset

--- a/src/app/toggle-zoom/toggle-zoom.component.html
+++ b/src/app/toggle-zoom/toggle-zoom.component.html
@@ -6,6 +6,12 @@
   <mat-icon>zoom_in</mat-icon>
 </button>
 <button
+  mat-raised-button 
+  [disabled]="disableZoomReset"
+  (click)="zoomReset()">
+  <mat-icon>close</mat-icon>
+</button>
+<button
   mat-raised-button
   [disabled]="disableZoomOut"
   (click)="zoomOut()">
