--- a/src/app/toggle-zoom/toggle-zoom.component.scss
+++ b/src/app/toggle-zoom/toggle-zoom.component.scss
@@ -10,6 +10,7 @@
   width: 36px;
   button {
     padding: 0;
+    border-radius: 0;
     min-width: 100%;
     ::ng-deep mat-icon {
       margin: 0;
