refactoring experience edit and delete

--- a/src/app/experience/experience-item/experience-item.component.html
+++ b/src/app/experience/experience-item/experience-item.component.html
@@ -6,3 +6,6 @@
   <header><strong>{{ item.title }}</strong></header>
   <p>{{ item.desc }}</p>
 </section>
+<app-clickable-overlay (editEvent)="edit()">
+  <mat-icon (click)="delete()">delete_forever</mat-icon>
+</app-clickable-overlay>
