--- a/src/app/experience/experience-list/experience-list.component.html
+++ b/src/app/experience/experience-list/experience-list.component.html
@@ -2,5 +2,6 @@
   <h3 class="headline headline-right h-3" style="margin-bottom: .25cm">Berufserfahrungen</h3>
 </header>
 <app-experience-item 
-  *ngFor="let experience of experiences"
-  [item]="experience" />
+  *ngFor="let experience of experiences; index as i"
+  [item]="experience"
+  [index]="i" />
