--- a/src/app/clickable-overlay/clickable-overlay.component.html
+++ b/src/app/clickable-overlay/clickable-overlay.component.html
@@ -1,3 +1,6 @@
 <div class="clickable-overlay">
-  <mat-icon>edit</mat-icon>
+  <div>
+  <mat-icon (click)="edit()">edit</mat-icon>
+  <ng-content></ng-content>
+  </div>
 </div>
