--- a/src/app/clickable-overlay/clickable-overlay.component.scss
+++ b/src/app/clickable-overlay/clickable-overlay.component.scss
@@ -5,25 +5,29 @@
   cursor: pointer;
   top:0;
   left:0;
-
-  mat-icon {
+  div {
     transition: opacity 100ms linear 0s;
     position: absolute;
-    background: rgba(0,0,0,.9);
-    border-radius: 100%;
     opacity: 0;
     top: 50%;
     left: 50%;
     transform: translate(-50%, -50%);
-    width: 50px;
-    height: 50px;
+    display: grid;
+    grid-template-columns: auto auto;
+    grid-gap: 10px;
+  }
+  mat-icon, ::ng-deep mat-icon {
+    background: rgba(0,0,0,.9);
+    border-radius: 100%;
+    width: 40px;
+    height: 40px;
     text-align: center;
-    line-height: 50px;
+    line-height: 40px;
     color: white;
   }
 
   &:hover {
-    mat-icon {
+    div {
       opacity: .8;
     }
   }
