--- a/src/app/clickable-overlay/clickable-overlay.component.scss
+++ b/src/app/clickable-overlay/clickable-overlay.component.scss
@@ -13,7 +13,7 @@
     left: 50%;
     transform: translate(-50%, -50%);
     display: grid;
-    grid-template-columns: auto auto;
+    grid-auto-flow: column;
     grid-gap: 10px;
   }
   mat-icon, ::ng-deep mat-icon {
