working avatar, avatar-dialog, server...

--- a/src/app/experience/experience-item/experience-dialog/experience-dialog.component.html
+++ b/src/app/experience/experience-item/experience-dialog/experience-dialog.component.html
@@ -1,5 +1,6 @@
 <h2 mat-dialog-title>
-  Berufserfahrung bearbeiten
+  <span *ngIf="dialog">Berufserfahrung bearbeiten </span>
+  <span *ngIf="!dialog">Berufserfahrung hinzufügen </span>
 </h2>
 <form 
   [formGroup]="experienceForm" 
