--- a/src/app/page/page-header/page-header.component.scss
+++ b/src/app/page/page-header/page-header.component.scss
@@ -3,16 +3,11 @@
   grid-template-columns: var(--left-size) 1fr;
   grid-template-rows: var(--left-size);
 }
+
 .content-left {
   padding-right: var(--space);
 }
-.avatar {
-  max-width: 100%;
-  position: relative;
-  border-radius: 100%;
-  filter: grayscale(1)
-}
 
-.header {
+.header, .avatar-wrapper {
   position: relative;
 }
