--- a/src/app/page/page-header/page-header.component.html
+++ b/src/app/page/page-header/page-header.component.html
@@ -1,10 +1,14 @@
 <aside class="content-left">
-  <img 
-    class="avatar" 
-    [src]="avatarUrl" />
+  <app-avatar />
+  <div class="avatar-wrapper">
+    <img 
+      class="avatar" 
+      [src]="avatarUrl" />
+    <app-clickable-overlay (click)="editAvatar()" />
+  </div>
 </aside>
 <section class="content-right">
-  <header class="header">
+  <header class="header" (click)="editHeader()">
     <h1 
       class="headline h-1"
       [innerHTML]="name">
