--- a/src/styles.scss
+++ b/src/styles.scss
@@ -4,6 +4,11 @@ body, html {
   background-color: #303030;
   font-size: var(--body-text-size);
   font-family: "Calibri"!important;
+  text-rendering: optimizeLegibility;
+  -webkit-font-smoothing: antialiased;
+  -moz-osx-font-smoothing: antialiased;
+  font-smooth: always;
+  font-smoothing: antialiased;
 }
 @media print {
   body {
@@ -162,6 +167,13 @@ ul {
 
   .no-in-print {
     display: none!important;
+  }
+}
+
+@media print and (color) {
+  * {
+    -webkit-print-color-adjust: exact;
+    print-color-adjust: exact;
   }
 }
 html, body { height: 100%; }
