--- a/src/theme.scss
+++ b/src/theme.scss
@@ -1,5 +1,5 @@
 :root {
-  --body-text-size: 11px;
+  --body-text-size: 10pt;
   --page-width: 21cm;
   --page-min-height: 29.7cm;
   --space: 1.5cm;
