--- a/src/app/page/page.component.html
+++ b/src/app/page/page.component.html
@@ -21,6 +21,10 @@
     *ngIf="showAboutMe" 
     class="content-block" />
     
-    <app-experience-list class="space-content-block--top space-content-block" />
+    <!-- <app-experience-list class="space-content-block--top space-content-block" /> -->
+
+    <app-list 
+      *ngFor="let itemList of itemLists" 
+      class="space-content-block--top space-content-block" />
 </section>
 
