--- a/src/app/list/list-item/list-item.component.html
+++ b/src/app/list/list-item/list-item.component.html
@@ -3,7 +3,7 @@
   <span>Firma</span>
 </aside>
 <section>
-  <header><strong>{{ item.title }}</strong></header>
+  <header><strong>{{ item.title }} / Store-ID: {{ storeId }}</strong></header>
   <p>Beschreibung</p>
 </section>
 <app-clickable-overlay (editEvent)="edit()">
