--- a/src/app/list/list.component.html
+++ b/src/app/list/list.component.html
@@ -6,4 +6,5 @@
 <app-list-item 
   *ngFor="let item of items; index as i"
   [item]="item"
-  [index]="i" />
+  [index]="i"
+  [storeId]="storeId" />
